Closed Bug 1790281 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::layers::GPUVideoTextureData::Deallocate]

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 + fixed

People

(Reporter: aryx, Assigned: bradwerth)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

81 crashes from 3+ devices starting with Firefox 106.0a1 20220909093917. This aligns with the landing of bug 1787561 (which is also supposed to get uplifted to v105).

Crash report: https://crash-stats.mozilla.org/report/index/027ba4ea-39c7-44aa-9995-414fd0220911

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll mozilla::layers::GPUVideoTextureData::Deallocate gfx/layers/client/GPUVideoTextureClient.cpp:44
1 xul.dll mozilla::layers::TextureChild::ActorDestroy gfx/layers/client/TextureClient.cpp:407
2 xul.dll mozilla::ipc::IProtocol::DestroySubtree ipc/glue/ProtocolUtils.cpp:585
3 xul.dll mozilla::layers::PTextureChild::OnMessageReceived ipc/ipdl/PTextureChild.cpp:196
4 xul.dll mozilla::layers::PImageBridgeChild::OnMessageReceived ipc/ipdl/PImageBridgeChild.cpp:523
5 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1579
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1199
7 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:330
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:374
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:356
Flags: needinfo?(bwerth)

Since the status is marked as affected for nightly and as unaffected for release, is it affected or unaffected for beta?
For more information, please visit auto_nag documentation.

I see. I made a bad merge in D155902 in MediaResult RemoteVideoDecoderParent::ProcessDecodedData and that is causing this problem. I'll fix it up.

When D155902 merged and landed, it undid a recent change in
RemoteVideoDecoderParent::ProcessDecodedData without causing a compiler
error. This fixes up the merge to what was intended.

Assignee: nobody → bwerth
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Flags: needinfo?(bwerth)
You need to log in before you can comment on or make changes to this bug.