Bug 1790281: Fixup a bad merge from Bug 1787561. r=alwu

When D155902 merged and landed, it undid a recent change in
RemoteVideoDecoderParent::ProcessDecodedData without causing a compiler
error. This fixes up the merge to what was intended.

Differential Revision: https://phabricator.services.mozilla.com/D157080